Fix mobile navbar overlap on consultant page

--- a/stylesheet/stles.css
+++ b/stylesheet/stles.css
@@ -1217,7 +1217,8 @@ button:hover {
     }
     .team-image {
         width: 100%;
-        height: 50vh;       
+        height: 50vh;    
+        margin-top: 60px; 
     }
     .team-text {
         flex: 1 0 auto;
